# convab-analysis-engine

./: .coveragerc  .cursorrules  .editorconfig  .env.example  .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml  system_prompt.md  tsconfig.json
.github/: copilot-instructions.concierge.md  copilot-instructions.md  copilot-instructions.template.md  copilot-instructions.worker.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  data-service.md  docs.md  feature.md  hotfix.md  infra.md
.github/agents/: code-writer.agent.md  concierge.agent.md
.github/skills/code-writer/: SKILL.md
.github/skills/concierge/: SKILL.md
.github/skills/planner/: SKILL.md
.github/skills/pr-manager/: SKILL.md
.github/skills/qa-tester/: SKILL.md
.github/workflows/: build.yml  deploy.yml  security.yml  test.yml
ADRs/: 001-repo-structure.md  README.md
app/: CODE_REVIEW.md  CODE_REVIEW_v2.md  __init__.py  cli.py  config.py  csv_limits.py  server.py  server_jobs.py  server_models.py  server_runtime.py  text_normalization.py
app/analysis/: __init__.py  analyzer.py  response_validation.py
app/analysis/prompts/: critical_guidelines.txt
app/cli/: __init__.py  __main__.py  analyze.py  app.py  clean.py  data_info.py  output.py  parser.py  schema.py  shared.py  tag_fix.py
app/data/: token_usage.jsonl
app/dedup/: __init__.py  tag_dedup.py
app/llm/: __init__.py  costs.py  gemini_client.py  model_config.py  openai_client.py  provider.py  rate_limiter.py  response_parser.py  schema_validation.py  token_tracking.py
app/post_processing/: __init__.py  tag_fix.py
app/processing/: __init__.py  attachment.py  cache.py  cleaner.py  data_store.py  job_store.py  tag_dedup.py  token_estimation.py
app/prompts/: __init__.py  response_schema.py  response_validation.py
app/prompts/analysis/: __init__.py  analysis_prompt.txt  builder.py  critical_guidelines.txt
app/prompts/schema_generation/: __init__.py  builder.py  response_schema.json  response_schema_example.json  system_prompt.txt  user_prompt_template.txt
app/routers/: __init__.py  analysis.py  cleaning.py  jobs.py  jobs_runner.py  models.py  schema.py  state.py
app/schema/: __init__.py  generator.py  prompts.py  response_schema_example.json
app/schema/prompts/: __init__.py  prompts.py  response_schema.json  response_schema_old.json  system_prompt.txt  user_prompt_template.txt
app/tests/: conftest.py  job_test_helpers.py  test_analysis_response_validation.py  test_analysis_response_validation_integration.py  test_analyze_first5_integration.py  test_analyze_integration.py  test_analyzer_callbacks.py  test_attachment_ocr.py  test_cli.py  test_costs.py  test_csv_processing.py  test_data_store.py  test_e2e_integration.py  test_gemini_client_validation.py  test_job_handling_integration.py  test_job_store.py  test_llm_utils.py  test_model_provider_resolution.py  test_openai_client_validation.py  test_pdf_mixed_ocr.py  test_rate_limiter_concurrency.py  test_rate_limiter_throughput_integration.py  test_response_parser.py  test_schema_generation.py  test_server_lifecycle.py  test_tag_dedup.py  test_tag_fix.py  test_text_normalization.py
app/tests/fixtures/: responses.csv  responses_100_cleaned.csv
docs/: AGENT_OPERATIONS.md  AGENT_SAFETY.md  API.md  ARCHITECTURE.md  DEPENDENCIES.md  DEPLOYMENT.md  ENVIRONMENT.md  FIELD_RENAME_LOCATIONS.md  NOTES_AND_ADR_MANAGEMENT.md  OBSERVABILITY.md  QUICK_START.md  README.md  SCHEMA.md  SCHEMA_REVIEW.md  SCHEMA_UPDATES_SUMMARY.md  SMART_DOGFOOD.md  TESTING.md  openapi.with-code-samples.yml
docs/LLMs/python-genai/: README.md
docs/diagrams/: README.md  auth-sequence.md  container.md  database-er.md  system-context.md
docs/evaluation/: ACCEPTANCE_CRITERIA.md  README.md  REVIEW_CHECKLIST.md  SMOKE.md  VERIFICATION_CHECKLIST.md
docs/python-genai/: codegen-instructions.md  genai-doc.md
python/: .coveragerc  .dockerignore  Dockerfile  MANIFEST.in  docker-compose.yml  logging.py  pyproject.toml  pytest.ini  requirements.txt  test_example.py
scripts/: README.md  __init__.py  add_estimated_tokens_column.py  build_downloads_index.py  context-dump.sh  count_tokens.py  debug_failing_batch.py  download_regs_gov_attachments.py  find_missing_ids.py  hit_analyze_endpoint.py  pdf_page_stats.py  run_cli_e2e.py  run_e2e.py  run_e2e_no_cache.py  slice_missing_ids.py  smoke-test.sh  tagger.py
src/cfpb_exploration/: __init__.py  __main__.py  complaint_analyzer.py  data_processor.py  main.py
src/cfpb_exploration/data/: complaints_1.csv
src/cfpb_exploration/prompts/: system_prompt.txt  use_case.txt  user_prompt_template.txt
src/cfpb_exploration/schemas/: google_gemini-3-pro_MEDIUM_2025-12-17T15-28-23.json
src/regs_dot_gov_exploration/: DATA_CONTEXT.md  RESEARCH_QUESTIONS.md  __init__.py  __main__.py  attachment_processor.py  complaint_analyzer.py  create_head_sample.py  data_processor.py  main.py
src/regs_dot_gov_exploration/output/: parsed_attachments.csv  responses_with_attachments.csv
src/regs_dot_gov_exploration/prompts/: use_case.txt  user_prompt_template.txt
src/regs_dot_gov_exploration/schemas/: index.csv  regs_gov_gemini-3-flash-preview_MINIMAL_2026-01-29T15-14-22.json  regs_gov_gemini-3-flash-preview_MINIMAL_2026-01-29T22-17-09.json  (+1 more)
src/sensemaking_api/: __init__.py  app.py  cache_helpers.py
src/tests/: conftest.py  test_api.py  test_attachment_processor.py  test_example.py  test_regs_gov_analyzer.py  test_regs_gov_data_processor.py  test_regs_gov_parsed_attachments.py
src/utilities/: __init__.py  attachment_parser.py  schema_generator.py
temp/notes/: HANDOFF.md  NEXT_STEPS.md  README.md  ROADMAP.md
tests/: test_attachment_processor.py  test_example.py  test_regs_gov_analyzer.py  test_regs_gov_data_processor.py
(+155 files in other folders)
