[project]
name = "sensemaking"
version = "0.1.0"
description = "A generic response analysis platform for parsing free-text data from diverse sources"
authors = [
    {name = "Jim Moffet", email = "jim@digitalpublic.ventures"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    "google-genai>=1.56.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "xxhash>=3.4.1",
    "numpy>=1.26.0",
    "pymupdf>=1.24.0",
    "pillow>=10.4.0",
    "python-docx>=1.1.0",
    "paddleocr>=2.7.3",
    "paddlepaddle>=2.6.0",
    "openai>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "jsonschema>=4.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/jimmoffet/sensemaking"
Repository = "https://github.com/jimmoffet/sensemaking.git"
Issues = "https://github.com/jimmoffet/sensemaking/issues"


[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow-running",
    "integration: marks integration tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
src = ["app"]
target-version = "py313"
line-length = 120
extend-exclude = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
